--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="sidebar__user">
                 <div class="sidebar__name">Сергей</div>
-                <div class="sidebar__text">Несчестливый студент</div>
+                <div class="sidebar__text">Не особо счастливый студент</div>
             </div>
             <div class="sidebar__tabs">
                 <div class="sidebar__item">
