--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="les1/index.html">Урок 1</a>\
-                        <li> class="contenct__list-item">
+                        <a href="les1/index.html">Урок 1</a>
+                        <li class="contenct__list-item">
                         <a href="les2/index.html">Урок 2</a>
                     </li>
                 </ul>
