--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                         <a href="les1/index.html">Урок 1</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="les2/index.html">Урок 2</a>
+                        <a href="les7/index.html">Урок 2</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="les8-9/index.html">Урок 2</a>
                     </li>
                 </ul>
             </div>
