--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                     <li class="content__list-item">
                         <a href="lesson13/index.html">Урок 13</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson13/index.html">Урок 20</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
