--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
                         <a href="lesson13/index.html">Урок 13</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson13/index.html">Урок 20</a>
+                        <a href="lesson20/index.html">Урок 20</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson36HW/index.html" href="lesson36HW/css/style.css">Урок 36</a>
                     </li>
                 </ul>
             </div>
