--- a/lesson36HW/index.html
+++ b/lesson36HW/index.html
@@ -10,46 +10,58 @@
 
 <body>
     <div class="mainblock">
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
-        <div class="block">
-            <h1> Заголовок </h1>
-            Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
-            домах!
-        </div>
+        <section class="section1">
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+        </section>
+        <section class="section2">
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+            <div class="block">
+                <h1> Заголовок </h1>
+                Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось,
+                буквенных
+                домах!
+            </div>
+        </section>
         <div class="block">
             <h1> Заголовок </h1>
             Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Осталось, буквенных
