--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                         <a href="lesson20/index.html">Урок 20</a>
                     </li>
                     <li class="content__list-item">
+                        <a href="lesson43-maket/index.html">Урок43</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="lesson36HW/index.html" href="lesson36HW/css/style.css">Урок 36</a>
                     </li>
                 </ul>
